# thoughts_board

./: .dockerignore  .env  .gitignore  Dockerfile.backend  README.md  auth.py  docker-compose.yml  generate_db_password.sh  main.py  package-lock.json  pyproject.toml
.github/workflows/: docker-publish.yml
backend-app/: Dockerfile.backend  main.py  pyproject.toml
frontend-app/: Dockerfile.frontend  index.html  package-lock.json  package.json  style.css  vite.config.js
frontend-app/src/: App.vue  main.js
frontend-app/src/components/: NewThoughtForm.vue  ThoughtBoard.vue  ThoughtBubble.vue  ThoughtCard.vue  ThoughtForm.vue  ThoughtItem.vue  ThoughtList.vue
frontend-app/src/router/: index.js
frontend-app/src/services/: ApiService.js  api.js
frontend-app/src/views/: HomeView.vue  ThoughtBoardView.vue
traefik/: acme.json
